--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "adapt-block-branching",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "framework": ">=2.0.0",
     "displayName": "Block Branching",
     "main": "/js/adapt-block-branching.js",
@@ -13,7 +13,7 @@
 		"Simon Date <simon@adaptfreelancer.com>"
 	],
   "extension" : "scenario",
-  "targetAttribute": "_scenario",
+  "targetAttribute": "_blockBranching",
     "license": "GPL-3.0",
     "homepage": "https://github.com/simondate/adapt-block-branching"
 }
